--- a/myapp/templates/homepage/asli.html
+++ b/myapp/templates/homepage/asli.html
@@ -192,7 +192,7 @@
                               <a href="../../static/images/blog/blog-post3.jpg" data-rel="prettyPhoto">
                               <span class="img-hover"></span>
                               <span class="fullscreen"><i class="icon-search"></i></span>
-                              <img src=" ../../static/images/blog-post1.jpg" alt="">
+                              <img src=" ../../static/images/شارژ.jpeg" alt="">
                               </a>
                            </div>
                            <div class="post-content">
