--- a/myapp/templates/homepage/father.html
+++ b/myapp/templates/homepage/father.html
@@ -133,7 +133,7 @@
                            </ul>
                         </li>
                         <li><a href="/register/"> ایجاد پروفایل</a></li>
-                          <li><a href="/freelancer/"> صفحه ی اصلی</a></li>
+                          <li><a href="/asli/"> صفحه ی اصلی</a></li>
                      </ul>
                   </nav>
                   <!-- Menu End -->
