--- a/myapp/templates/homepage/call.html
+++ b/myapp/templates/homepage/call.html
@@ -1,9 +1,172 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title></title>
-</head>
-<body>
+{% extends "homepage/father.html" %}
+{% block page_title %}{% endblock %}
 
-</body>
-</html>
+
+
+         <!-- Header End -->
+         <!-- Content Start -->
+         <div id="main">
+            <!-- Title, Breadcrumb Start-->
+
+            <!-- Title, Breadcrumb End-->
+            <!-- Main Content start-->
+
+
+                  <div class="row">
+                  {% block content1 %}
+                       <div id="contact-form" class="col-lg-8 col-md-8 col-sm-6 col-xs-12">
+                     <div class=" " id="contact-form">
+                        <h3 class="title">!برای ما ایمیل بفرست</h3>
+                        <p>
+                          شما درهرزمان می توانید با نماینده ی آنلاین ما صحبت کنید.لطفا بااستفاده از سیستم چت بصورت زنده ویا یکی ازبرنامه های پیام رسانی زیرپیام بفرستید.
+                        </p>
+                        <p>
+                          !لطفا برای دریافت پاسخ صبورباشید
+                        </p>
+                        <div class="divider"></div>
+                        <form method="post" class="reply" id="contact">
+                           <fieldset>
+                              <div class="row">
+                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                    <label>Name: <span>*</span></label>
+                                    <input class="form-control" id="name" name="name" type="text" value="" required>
+                                 </div>
+                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                    <label>Email: <span>*</span></label>
+                                    <input class="form-control" type="email" id="email" name="email" value="" required>
+                                 </div>
+                              </div>
+                              <div class="row">
+                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <label>Subject: <span>*</span></label>
+                                    <input class="form-control" id="subject" name="subject" type="text" value="" required>
+                                 </div>
+                              </div>
+                              <div class="row">
+                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                                    <label>Message: <span>*</span></label>
+                                    <textarea class="form-control" id="text" name="text" rows="3" cols="40" required></textarea>
+                                 </div>
+                              </div>
+                           </fieldset>
+                           <button class="btn-normal btn-color submit  bottom-pad" type="submit">Send</button>
+                           <div class="success alert-success alert" style="display:none">Your message has been sent successfully.</div>
+                           <div class="error alert-error alert" style="display:none">E-mail must be valid and message must be longer than 100 characters.</div>
+                           <div class="clearfix">
+                           </div>
+                        </form>
+                     </div>
+                      {% endblock content1 %}
+                  </div>
+{% block content2 %}
+    <div class="sidebar col-lg-3 col-md-3 col-sm-4 col-xs-12">
+                     <div class=" ">
+                        <div class="address widget">
+                           <h3 class="title">Head Office</h3>
+                           <ul class="contact-us">
+                              <li>
+                                 <i class="icon-map-marker"></i>
+                                 <p>
+                                    <strong>Address:</strong> 250 Sher-E- Bangla Road, <br>
+                                    Khulna, Bangladesh
+                                 </p>
+                              </li>
+                              <li>
+                                 <i class="icon-phone"></i>
+                                 <p>
+                                    <strong>Phone:</strong> +880 41 723 272
+                                 </p>
+                              </li>
+                              <li>
+                                 <i class="icon-envelope"></i>
+                                 <p>
+                                    <strong>Email:</strong><a href="mailto:info@fifothemes.com">info@fifothemes.com</a>
+                                 </p>
+                              </li>
+                           </ul>
+                        </div>
+                        <div class="contact-info widget">
+                           <h3 class="title">Business Hour</h3>
+                           <ul>
+                              <li><i class="icon-time"> </i>Monday - Friday 9am to 5pm </li>
+                              <li><i class="icon-time"> </i>Saturday - 9am to 2pm</li>
+                              <li><i class="icon-remove-circle"> </i>Sunday - Closed</li>
+                           </ul>
+                        </div>
+                        <div class="follow widget">
+                           <h3 class="title">Follow Us</h3>
+                           <div class="member-social dark">
+                              <a class="facebook" href="#"><i class="icon-facebook"></i></a>
+                              <a class="twitter" href="#"><i class="icon-twitter"></i></a>
+                              <a class="dribbble" href="#"><i class="icon-dribbble"></i></a>
+                              <a class="gplus" href="#"><i class="icon-google-plus"></i></a>
+                              <a class="linkedin" href="#"><i class="icon-linkedin"></i></a>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+{% endblock content2 %}
+               </div>
+         </div>
+
+            <!-- Main Content end-->
+
+         <!-- Content End -->
+         <!-- Footer Start -->
+
+         <!-- Scroll To Top -->
+         <a href="#" class="scrollup"><i class="icon-angle-up"></i></a>
+
+      <!-- Wrap End -->
+      <section id="style-switcher">
+        <h2>Style Switcher <a href="#"><i class="icon-cog"></i></a></h2>
+        <div>
+           <h3>Predefined Colors</h3>
+           <ul id="colors" class="colors">
+              <li><a title="Blue" class="blue" href="#"></a></li>
+              <li><a title="Green" class="green" href="#"></a></li>
+              <li><a title="Orange" class="orange" href="#"></a></li>
+              <li><a title="Purple" class="purple" href="#"></a></li>
+              <li><a title="Red" class="red" href="#"></a></li>
+              <li><a title="Magenta" class="magenta" href="#"></a></li>
+              <li><a title="Brown" class="brown" href="#"></a></li>
+              <li><a title="Gray" class="gray" href="#"></a></li>
+              <li><a title="Golden" class="golden" href="#"></a></li>
+              <li><a title="Teal" class="teal" href="#"></a></li>
+           </ul>
+           <h3>Layout Style</h3>
+           <div class="layout-style">
+              <select autocomplete="off" id="layout-style">
+                 <option value="1">Wide</option>
+                 <option value="2">Boxed</option>
+              </select>
+           </div>
+           <h3>Header Color</h3>
+           <div class="header-color">
+              <input type='text' class="header-bg" />
+           </div>
+           <h3>Footer Top Color</h3>
+           <div class="header-color">
+              <input type='text' class="footer-bg" />
+           </div>
+           <h3>Footer Bottom Color</h3>
+           <div class="header-color">
+              <input type='text' class="footer-bottom" />
+           </div>
+           <h3>Background Image</h3>
+           <ul id="bg" class="colors bg">
+              <li><a class="bg1" href="#"></a></li>
+              <li><a class="bg2" href="#"></a></li>
+              <li><a class="bg3" href="#"></a></li>
+              <li><a class="bg4" href="#"></a></li>
+              <li><a class="bg5" href="#"></a></li>
+              <li><a class="bg6" href="#"></a></li>
+              <li><a class="bg7" href="#"></a></li>
+              <li><a class="bg8" href="#"></a></li>
+              <li><a class="bg9" href="#"></a></li>
+              <li><a class="bg10" href="#"></a></li>
+           </ul>
+        </div>
+     </section>
+      <!-- The Scripts -->
+
